--- a/src/App.css
+++ b/src/App.css
@@ -16,56 +16,78 @@ body, html {
 .header-content, .page-container {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  font-weight: lighter;
+  left: calc(50% - 300px); /* Adjust the left position */
+  transform: translate(-50%, -50%);
+  text-align: left; /* Align text to the left */
 }
 
 .navigation {
   position: fixed;
   top: 0;
-  width: 100%;
-  padding: 10px;
+  right: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end; /* Align navigation content to the top right corner */
+  padding: 20px;
 }
 
 .nav-content {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+  flex-direction: column;
+  align-items: center; /* Center icons horizontally */
 }
 
 .nav-left {
-  color: lightgray; /* Change text color as needed */
-  font-weight: bold;
-  font-size: 20px;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.nav-left:hover {
-  color: white; /* Change text color on hover */
+  margin-bottom: auto;
+  font-size: 24px;
+  color: lightgray;
 }
 
 .nav-right {
-  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center icons horizontally */
 }
 
 .nav-right button {
+  margin: 20px 0; /* Adjust vertical spacing between icons */
+  background-color: rgba(180, 170, 200, 0.1); /* Use lighter purple hue */
+  border: none;
+  cursor: pointer;
+  outline: none;
   transition: background-color 0.3s ease;
+  border-radius: 50%;
+  padding: 15px; /* Increase padding to make clickable region larger */
+  display: flex; /* Ensure icons are centered vertically */
+  justify-content: center; /* Ensure icons are centered vertically */
+  align-items: center; /* Ensure icons are centered vertically */
+}
+
+.nav-right button svg {
+  width: 30px;
+  height: 30px;
+  color: rgba(180, 170, 200, 0.8); /* Set icon color */
 }
 
 .nav-right button:hover {
-  background-color: rgba(255, 255, 255, 0.1); /* Add hover effect */
-  border-radius: 5px; /* Optional: Add rounded corners */
+  background-color: rgba(180, 170, 200, 0.3); /* Lighten the background color on hover */
 }
 
-.nav-right button {
-  margin-left: 10px;
-  color: lightgray; /* Change button text color as needed */
-  background-color: transparent; /* Change button background color as needed */
-  border: none;
+.initials {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  color: rgba(180, 170, 200, 0.8);
+  transition: color 0.3s ease; /* Add transition effect for color change */
   cursor: pointer;
+  right: calc(30px);
+}
+
+.initials:hover {
+  color: rgba(180, 170, 200, 1); /* Change color on hover */
 }
 
 .gradient-text {
@@ -74,6 +96,45 @@ body, html {
   -webkit-text-fill-color: transparent;
   background-size: 200% auto; /* Double the size to allow for smooth movement */
   animation: animateGradient 6s linear infinite; /* Adjust animation duration and timing as needed */
+}
+
+.blinking-cursor {
+  display: inline-block;
+  width: 4px; /* Adjust the width of the cursor */
+  height: 1em;
+  background-color: white; /* Change the color of the cursor */
+  animation: blink 1s infinite; /* Set blinking animation */
+}
+
+.spinning-black-hole {
+  width: 50px; /* Adjust the size of the black hole */
+  height: 50px; /* Adjust the size of the black hole */
+  border: 2px solid transparent;
+  border-radius: 50%;
+  border-top-color: #000; /* Set border color to black */
+  animation: spin 1s linear infinite; /* Set spinning animation */
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg); /* Rotate the black hole 360 degrees */
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.bold {
+  font-weight: bold; /* Make the text bold */
 }
 
 @keyframes animateGradient {
