--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,9 @@ body, html {
 
 .nav-content {
   display: flex;
-  flex-direction: column;
-  align-items: center; /* Center icons horizontally */
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
 .nav-left {
@@ -146,6 +147,12 @@ body, html {
   }
   100% {
     background-position: 0% 50%; /* Back to left */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header-content, .page-container {
+    left: 20px; /* Adjust the left position for smaller screens */
   }
 }
 
